# IXIC_daily_alert

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  adjust_threshold.py  app.py  backfill_ohlc.py  calc_drawdown.py  check_feedback.py  feedback.csv  fetch_news.py  gen_doc.py  gold.py  gold_history.csv  gold_state.json  health.json  history.csv  ixic_introduction.docx  ixic_introduction.md  market_state.json  memory.json  nasdaq.py  pyproject.toml  requirements.txt  run_web.bat  threshold_config.json  uptime.json  ~$_Agent_基础概念总结.docx
.github/workflows/: daily.yml  feedback.yml  test.yml
docs/: AI_Agent_基础概念总结.docx  AI写邮件功能规划.docx  IXIC项目详细介绍_小白版.docx  _ai_email_plan.txt  gen_doc.py  ixic_introduction.md  plan_steps_3_4.md  summary_report.docx  类型提示与测试入门指南.docx  项目对比分析.md  项目详细介绍.md
modules/: agent_engine.py  analyzer.py  backtester.py  config.py  data_fetcher.py  drawdown.py  feedback_checker.py  forex.py  gold_alert.py  gold_backtester.py  gold_fetcher.py  gold_storage.py  gold_types.py  holidays.py  logger.py  mailer.py  news_fetcher.py  stats.py  storage.py  types.py  uptime.py  visualizer.py  webhook.py  yahoo_client.py
tests/: test_agent_email.py  test_analyzer.py  test_config.py  test_data_fetcher.py  test_drawdown.py  test_feedback_checker.py  test_holidays.py  test_news_fetcher.py  test_stats.py  test_visualizer.py
