[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ixic-monitor"
version = "1.0.0"
description = "NASDAQ IXIC Smart Monitoring System"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.58.0",
    "pandas>=3.0.0",
    "requests>=2.34.2",
    "plotly>=6.2.1",
    "python-dotenv>=1.0.0",
    "openai>=1.68.0",
    "openai-agents>=0.17",
    "pandas-market-calendars>=5.4.0",
]

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
