[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ixic-monitor"
version = "1.0.0"
description = "NASDAQ IXIC Smart Monitoring System"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.58.0",
    "pandas>=3.0.0",
    "requests>=2.34.2",
    "plotly>=6.2.1",
    "python-dotenv>=1.0.0",
    "openai>=1.68.0",
    "openai-agents>=0.17",
    "pandas-market-calendars>=5.4.0",
]

[project.scripts]
nasdaq-run = "nasdaq:main"

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
